--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "historische-zeitschrift.doc.tar.xz": 158e21eeec1e1dd8e848496549162e2b196896c7
-  "historische-zeitschrift.tar.xz": b2be1983ca51e2a27d0e2de0383d96b113bc9693
+  historische-zeitschrift.doc.tar.xz: 0333c2537938801b9bb1d9f4bce065af9c9cfef0
+  historische-zeitschrift.tar.xz: dd1864fe97e49d55876819c80fa8c56ff671be24
