--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  historische-zeitschrift.doc.tar.xz: 0333c2537938801b9bb1d9f4bce065af9c9cfef0
-  historische-zeitschrift.tar.xz: dd1864fe97e49d55876819c80fa8c56ff671be24
+  historische-zeitschrift.doc.r42635.tar.xz: eb784af74b43c83c17e2b7722080c4c259b7b69d
+  historische-zeitschrift.r42635.tar.xz: 2d6966b5b37975a3a5ef5c581ab989c65c309fe0
